--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <main class="bg-cyan-50">
   <app-navbar></app-navbar>
   <app-hero></app-hero>
+  <app-features></app-features>
   <app-services></app-services>
   <app-cta></app-cta>
   <app-footer></app-footer>
