--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,1 +1,19 @@
-<p>hero works!</p>
+<section class="bg-[url('https://i.ibb.co/LtSSTR4/hero.jpg')] flex items-center py-24 px-4 bg-cover h-lvh -mb-20">
+    <div class="xl:w-1/2 ">
+        <h1 class="text-6xl font-bold pb-1">Take The Worry Out Of</h1>
+        <h1 class="text-6xl font-bold pb-1">Life With <span class="text-cyan-600">Insurance</span>
+        </h1>
+        <h1 class="text-6xl font-bold">Protection</h1>
+        <p class="text-xl pt-8">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nemo veniam voluptates
+            temporibus illum? Quos
+            odit
+            amet, vel quasi ad quas nesciunt deleniti fugiat consequuntur sapiente ullam, non possimus nam?</p>
+        <div>
+            <button class="bg-cyan-600 border-0 p-4 text-white font-semibold m-8 ml-0 w-1/3 hover:shadow-xl">Get
+                Started</button>
+            <button
+                class="bg-transparent border-2 p-4 border-cyan-600 text-cyan-600 font-semibold m-8 w-1/3 hover:shadow-xl hover:text-white hover:bg-cyan-600 transition-all">Contact
+                Us</button>
+        </div>
+    </div>
+</section>
