--- a/src/app/components/service-item/service-item.component.html
+++ b/src/app/components/service-item/service-item.component.html
@@ -1,6 +1,6 @@
 <div [ngStyle]="{'background-image': 'url(' + item.bgImage + ')'}"
-    class="bg-image flex h-[200px] w-[15rem] lg:h-[300px] lg:w-[25rem] bg-cover items-end justify-stretch m-2">
-    <div class=" bg-cyan-500 bg-opacity-50 text-white p-4">
+    class="bg-image flex h-[200px] w-[15rem] lg:h-[300px] lg:w-[25rem] bg-cover items-end justify-stretch m-2 p-4">
+    <div class=" bg-cyan-500 bg-opacity-70 text-white p-4 w-full text-start">
         <p>INSURANCE {{ item.insuranceName }}</p>
         <p class="font-bold">{{ item.insuranceType }}</p>
     </div>
